--- a/1.05-lesson-intro_to_probability/starter-code.ipynb
+++ b/1.05-lesson-intro_to_probability/starter-code.ipynb
@@ -83,10 +83,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dice = [1, 2, 3, 4, 5, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get random result of die toss\n",
+    "np.random.choice(dice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odd_even(n):\n",
+    "    ct = 0\n",
+    "    for i in range(n):\n",
+    "        result = np.random.choice(dice)\n",
+    "        # check if result is odd/even\n",
+    "        if result%2==1:\n",
+    "            ct+=1\n",
+    "    #print(ct)\n",
+    "    print(ct/n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5045\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd_even(10000)"
+   ]
   },
   {
    "cell_type": "code",
@@ -97,30 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4965"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -155,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,18 +222,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "same_color(10_000)"
+    "def same_color(n):\n",
+    "    ct = 0\n",
+    "    # iterate the experiment 'n' times\n",
+    "    for i in range(n):\n",
+    "        # get the result of the randomized selection\n",
+    "        draws = np.random.choice(bag_of_balls, size=2, replace=False)\n",
+    "        #print(draws)\n",
+    "        # check if both the draws are of the same color\n",
+    "        if draws[0]==draws[1]:\n",
+    "            ct+=1\n",
+    "    print(ct/n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.47921\n"
+     ]
+    }
+   ],
+   "source": [
+    "same_color(10000)"
    ]
   },
   {
@@ -199,12 +275,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "def three_dice(n):\n",
-    "    "
+    "    # Set up counter to see how many successes we get.\n",
+    "    count = 0\n",
+    "    rls = []\n",
+    "    # Run experiment n times.\n",
+    "    for i in range(n):\n",
+    "        rolls = []\n",
+    "        # Roll first die.\n",
+    "        roll_1 = np.random.choice(dice)\n",
+    "        rolls.extend([roll_1])\n",
+    "        if roll_1<5:\n",
+    "            # Roll second die.\n",
+    "            roll_2 = np.random.choice(dice)\n",
+    "            rolls.extend([roll_2])\n",
+    "            # Roll third die.\n",
+    "            if roll_2<6:\n",
+    "                roll_3 = np.random.choice(dice)\n",
+    "                rolls.extend([roll_3])\n",
+    "                # Check to see if the rolls are in increasing order.\n",
+    "                if roll_1 < roll_2 and roll_2 < roll_3:\n",
+    "                    print(rolls)\n",
+    "                    count += 1\n",
+    "        rls.append(rolls)\n",
+    "    # Return probability.\n",
+    "    print(rls)\n",
+    "    return count / n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 6]\n",
+      "[2, 4, 5]\n",
+      "[[5], [3, 2, 2], [5], [3, 5, 6], [2, 4, 5], [5], [5], [4, 1, 3], [5], [5]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "three_dice(10)"
    ]
   },
   {
@@ -808,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
