--- a/2.01-2.02-intro-to-pandas/intro-to-pandas-starter-code.ipynb
+++ b/2.01-2.02-intro-to-pandas/intro-to-pandas-starter-code.ipynb
@@ -3494,11 +3494,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What is the mean price by diamond cut?"
+    "# What is the mean price by diamond cut?\n",
+    "diamond_pth = \"datasets/diamonds.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "d_pd = pd.read_csv(diamond_pth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>carat</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>color</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>price</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>326</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>2.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>59.8</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>326</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>2.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>E</td>\n",
+       "      <td>VS1</td>\n",
+       "      <td>56.9</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>327</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>2.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>I</td>\n",
+       "      <td>VS2</td>\n",
+       "      <td>62.4</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>334</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>2.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>J</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>63.3</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>335</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>2.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   carat      cut color clarity  depth  table  price     x     y     z\n",
+       "0   0.23    Ideal     E     SI2   61.5   55.0    326  3.95  3.98  2.43\n",
+       "1   0.21  Premium     E     SI1   59.8   61.0    326  3.89  3.84  2.31\n",
+       "2   0.23     Good     E     VS1   56.9   65.0    327  4.05  4.07  2.31\n",
+       "3   0.29  Premium     I     VS2   62.4   58.0    334  4.20  4.23  2.63\n",
+       "4   0.31     Good     J     SI2   63.3   58.0    335  4.34  4.35  2.75"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cut\n",
+       "Fair         4358.757764\n",
+       "Good         3928.864452\n",
+       "Ideal        3457.541970\n",
+       "Premium      4584.257704\n",
+       "Very Good    3981.759891\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_pd.groupby('cut')['price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fair\n",
+      "8         337\n",
+      "91       2757\n",
+      "97       2759\n",
+      "123      2762\n",
+      "124      2762\n",
+      "         ... \n",
+      "53757    2724\n",
+      "53800    2732\n",
+      "53863    2743\n",
+      "53879    2745\n",
+      "53882    2747\n",
+      "Name: price, Length: 1610, dtype: int64\n",
+      "Good\n",
+      "2         327\n",
+      "4         335\n",
+      "10        339\n",
+      "17        351\n",
+      "18        351\n",
+      "         ... \n",
+      "53913    2753\n",
+      "53914    2753\n",
+      "53916    2753\n",
+      "53927    2756\n",
+      "53936    2757\n",
+      "Name: price, Length: 4906, dtype: int64\n",
+      "Ideal\n",
+      "0         326\n",
+      "11        340\n",
+      "13        344\n",
+      "16        348\n",
+      "39        403\n",
+      "         ... \n",
+      "53925    2756\n",
+      "53926    2756\n",
+      "53929    2756\n",
+      "53935    2757\n",
+      "53939    2757\n",
+      "Name: price, Length: 21551, dtype: int64\n",
+      "Premium\n",
+      "1         326\n",
+      "3         334\n",
+      "12        342\n",
+      "14        345\n",
+      "15        345\n",
+      "         ... \n",
+      "53928    2756\n",
+      "53930    2756\n",
+      "53931    2756\n",
+      "53934    2757\n",
+      "53938    2757\n",
+      "Name: price, Length: 13791, dtype: int64\n",
+      "Very Good\n",
+      "5         336\n",
+      "6         336\n",
+      "7         337\n",
+      "9         338\n",
+      "19        351\n",
+      "         ... \n",
+      "53921    2755\n",
+      "53922    2755\n",
+      "53932    2757\n",
+      "53933    2757\n",
+      "53937    2757\n",
+      "Name: price, Length: 12082, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in d_pd.groupby('cut'):\n",
+    "    print(k)\n",
+    "    print(v['price'])\n",
+    "    #print(\"\\n\")"
    ]
   },
   {
