--- a/2.04-lesson-data-visualization/python-data-viz-slides.ipynb
+++ b/2.04-lesson-data-visualization/python-data-viz-slides.ipynb
@@ -42,6 +42,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function corr in module pandas.core.frame:\n",
+      "\n",
+      "corr(self, method='pearson', min_periods=1)\n",
+      "    Compute pairwise correlation of columns, excluding NA/null values.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    method : {'pearson', 'kendall', 'spearman'} or callable\n",
+      "        * pearson : standard correlation coefficient\n",
+      "        * kendall : Kendall Tau correlation coefficient\n",
+      "        * spearman : Spearman rank correlation\n",
+      "        * callable: callable with input two 1d ndarrays\n",
+      "            and returning a float. Note that the returned matrix from corr\n",
+      "            will have 1 along the diagonals and will be symmetric\n",
+      "            regardless of the callable's behavior\n",
+      "            .. versionadded:: 0.24.0\n",
+      "    \n",
+      "    min_periods : int, optional\n",
+      "        Minimum number of observations required per pair of columns\n",
+      "        to have a valid result. Currently only available for Pearson\n",
+      "        and Spearman correlation.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    DataFrame\n",
+      "        Correlation matrix.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    DataFrame.corrwith\n",
+      "    Series.corr\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> def histogram_intersection(a, b):\n",
+      "    ...     v = np.minimum(a, b).sum().round(decimals=1)\n",
+      "    ...     return v\n",
+      "    >>> df = pd.DataFrame([(.2, .3), (.0, .6), (.6, .0), (.2, .1)],\n",
+      "    ...                   columns=['dogs', 'cats'])\n",
+      "    >>> df.corr(method=histogram_intersection)\n",
+      "          dogs  cats\n",
+      "    dogs   1.0   0.3\n",
+      "    cats   0.3   1.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "help(pd.DataFrame.corr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -136,35 +197,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>18.420760</td>\n",
        "      <td>93.802281</td>\n",
        "      <td>337166.53</td>\n",
        "      <td>337804.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>4.776510</td>\n",
        "      <td>21.082425</td>\n",
        "      <td>22351.86</td>\n",
        "      <td>21736.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>16.602401</td>\n",
        "      <td>93.612494</td>\n",
        "      <td>277764.46</td>\n",
        "      <td>306942.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>4.296111</td>\n",
        "      <td>16.824704</td>\n",
        "      <td>16805.11</td>\n",
        "      <td>9307.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>8.156023</td>\n",
        "      <td>35.011457</td>\n",
        "      <td>54411.42</td>\n",
@@ -552,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
