--- a/3.05-lesson-feature-engineering/starter-code-Vd2.ipynb
+++ b/3.05-lesson-feature-engineering/starter-code-Vd2.ipynb
@@ -111,10 +111,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ad_pth = \"../3.05-lesson-feature-engineering/datasets/Advertising.csv\"\n",
+    "#print(os.listdir(ad_pth))\n",
+    "#os.chdir(ad_pth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../3.05-lesson-feature-engineering/datasets/Advertising.csv'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ad_pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>TV</th>\n",
+       "      <th>radio</th>\n",
+       "      <th>newspaper</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>230.1</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>69.2</td>\n",
+       "      <td>22.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>44.5</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>45.1</td>\n",
+       "      <td>10.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>45.9</td>\n",
+       "      <td>69.3</td>\n",
+       "      <td>9.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>151.5</td>\n",
+       "      <td>41.3</td>\n",
+       "      <td>58.5</td>\n",
+       "      <td>18.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>180.8</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>58.4</td>\n",
+       "      <td>12.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     TV  radio  newspaper  sales\n",
+       "0           1  230.1   37.8       69.2   22.1\n",
+       "1           2   44.5   39.3       45.1   10.4\n",
+       "2           3   17.2   45.9       69.3    9.3\n",
+       "3           4  151.5   41.3       58.5   18.5\n",
+       "4           5  180.8   10.8       58.4   12.9"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd1 = pd.read_csv(ad_pth)\n",
+    "pd1.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -416,10 +547,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.datasets import load_digits\n",
+    "from sklearn.feature_selection import RFE\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load the digits dataset\n",
+    "digits = load_digits()\n",
+    "X = digits.images.reshape((len(digits.images), -1))\n",
+    "y = digits.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = SVC(kernel=\"linear\", C=1)\n",
+    "rfe = RFE(estimator=svc, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting estimator with 64 features.\n",
+      "Fitting estimator with 63 features.\n",
+      "Fitting estimator with 62 features.\n",
+      "Fitting estimator with 61 features.\n",
+      "Fitting estimator with 60 features.\n",
+      "Fitting estimator with 59 features.\n",
+      "Fitting estimator with 58 features.\n",
+      "Fitting estimator with 57 features.\n",
+      "Fitting estimator with 56 features.\n",
+      "Fitting estimator with 55 features.\n",
+      "Fitting estimator with 54 features.\n",
+      "Fitting estimator with 53 features.\n",
+      "Fitting estimator with 52 features.\n",
+      "Fitting estimator with 51 features.\n",
+      "Fitting estimator with 50 features.\n",
+      "Fitting estimator with 49 features.\n",
+      "Fitting estimator with 48 features.\n",
+      "Fitting estimator with 47 features.\n",
+      "Fitting estimator with 46 features.\n",
+      "Fitting estimator with 45 features.\n",
+      "Fitting estimator with 44 features.\n",
+      "Fitting estimator with 43 features.\n",
+      "Fitting estimator with 42 features.\n",
+      "Fitting estimator with 41 features.\n",
+      "Fitting estimator with 40 features.\n",
+      "Fitting estimator with 39 features.\n",
+      "Fitting estimator with 38 features.\n",
+      "Fitting estimator with 37 features.\n",
+      "Fitting estimator with 36 features.\n",
+      "Fitting estimator with 35 features.\n",
+      "Fitting estimator with 34 features.\n",
+      "Fitting estimator with 33 features.\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfe.fit(X, y)\n",
+    "ranking = rfe.ranking_.reshape(digits.images[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5., 13.,  9., ..., 13.,  0.,  0.],\n",
+       "       [ 0., 12., 13., ..., 11., 10.,  0.],\n",
+       "       [ 0.,  4., 15., ...,  3., 16.,  9.],\n",
+       "       ...,\n",
+       "       [ 1., 11., 15., ...,  9.,  6.,  0.],\n",
+       "       [ 2., 10.,  7., ..., 12., 12.,  0.],\n",
+       "       [10., 14.,  8., ..., 12., 12.,  1.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfe.transform(X)"
+   ]
   },
   {
    "cell_type": "code",
