Solution code ensemble

--- a/5.08-lesson-regex/Codealong-Practice.ipynb
+++ b/5.08-lesson-regex/Codealong-Practice.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,10 +147,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Expected W-L: 20-7 (3rd of 30)',\n",
+       " 'Expected W-L: 6-21 (28th of 30)',\n",
+       " 'Expected W-L: 12-16 (23rd of 30)',\n",
+       " 'Expected W-L: 9-20 (26th of 30)',\n",
+       " 'Expected W-L: 5-23 (29th of 30)',\n",
+       " 'Expected W-L: 10-18 (25th of 30)',\n",
+       " 'Expected W-L: 18-8 (4th of 30)',\n",
+       " 'Expected W-L: 19-8 (5th of 30)',\n",
+       " 'Expected W-L: 19-10 (7th of 30)',\n",
+       " 'Expected W-L: 15-12 (10th of 30)']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'Expected W-L: .*',teams_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re \n",
+    "# first, find the particular line we want, using RegEx\n",
+    "# next, clean up by removing Expected W-L: (use split)\n",
+    "# extract only the Score first\n",
+    "score = [w.split('Expected W-L: ')[1].split(' (')[0]  for w in re.findall(r'Expected W-L: .*',teams_data)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract only the Rank  by splitting on '( '\n",
+    "rank = [w.split('Expected W-L: ')[1].split(' (')[1].replace(')','')  for w in re.findall(r'Expected W-L: .*',teams_data)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "temp = pd.DataFrame()\n",
+    "temp['score'] = pd.Series(score)\n",
+    "temp['rank'] = pd.Series(rank)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>score</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>20-7</td>\n",
+       "      <td>3rd of 30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6-21</td>\n",
+       "      <td>28th of 30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>12-16</td>\n",
+       "      <td>23rd of 30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>9-20</td>\n",
+       "      <td>26th of 30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5-23</td>\n",
+       "      <td>29th of 30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   score        rank\n",
+       "0   20-7   3rd of 30\n",
+       "1   6-21  28th of 30\n",
+       "2  12-16  23rd of 30\n",
+       "3   9-20  26th of 30\n",
+       "4   5-23  29th of 30"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.head()"
+   ]
   },
   {
    "cell_type": "markdown",
