--- a/6.03-lesson-random-forests/solution-code/solution-code.ipynb
+++ b/6.03-lesson-random-forests/solution-code/solution-code.ipynb
@@ -76,14 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier, ExtraTreesClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import cross_val_score, train_test_split, GridSearchCV"
    ]
   },
@@ -103,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('datasets/train.csv')"
+    "train = pd.read_csv('../datasets/train.csv')"
    ]
   },
   {
@@ -112,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('datasets/test.csv')"
+    "test = pd.read_csv('../datasets/test.csv')"
    ]
   },
   {
@@ -127,26 +126,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(891, 12)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [],
    "source": [
     "train = train[train['Embarked'].notnull()]"
@@ -154,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +142,7 @@
        "(889, 12)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,29 +163,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 2, 1], dtype=int64)"
+       "13.675550101832997"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test['Pclass'].unique()"
+    "mean_fare_3 = train[train['Pclass'] == 3]['Fare'].mean()\n",
+    "mean_fare_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['Fare'] = test['Fare'].fillna(mean_fare_3)"
    ]
   },
   {
@@ -217,8 +199,18 @@
     {
      "data": {
       "text/plain": [
-       "152    3\n",
-       "Name: Pclass, dtype: int64"
+       "PassengerId      0\n",
+       "Pclass           0\n",
+       "Name             0\n",
+       "Sex              0\n",
+       "Age             86\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Ticket           0\n",
+       "Fare             0\n",
+       "Cabin          327\n",
+       "Embarked         0\n",
+       "dtype: int64"
       ]
      },
      "execution_count": 8,
@@ -227,39 +219,7 @@
     }
    ],
    "source": [
-    "test.loc[test['Fare'].isnull(), 'Pclass']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13.675550101832997"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean_fare_3 = train[train['Pclass']==3]['Fare'].mean()\n",
-    "mean_fare_3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test['Fare'] = test['Fare'].fillna(mean_fare_3)"
+    "test.isnull().sum()"
    ]
   },
   {
@@ -281,20 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train['Age'] = train.Age.fillna(999)"
+    "train['Age'] = train['Age'].fillna(999)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test['Age'] = test.Age.fillna(999)"
+    "test['Age'] = test['Age'].fillna(999)"
    ]
   },
   {
@@ -313,40 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "687"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train.Cabin.isnull().sum()"
+    "train['Cabin'] = train['Cabin'].notnull().astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.Cabin = train.Cabin.notnull().astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.Cabin = test.Cabin.notnull().astype(int)"
+    "test['Cabin'] = test['Cabin'].notnull().astype(int)"
    ]
   },
   {
@@ -361,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,11 +340,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Sex_male', 'Embarked_Q', 'Embarked_S']\n",
+    "features = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Cabin', 'Sex_male', 'Embarked_Q', 'Embarked_S']\n",
     "X = train[features]\n",
     "y = train['Survived']"
    ]
@@ -421,27 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.38245219347581555"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +372,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,16 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt = DecisionTreeClassifier()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,62 +440,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7732732732732733"
+       "0.8198406463920996"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_score(dt, X_train, y_train, cv=3).mean()"
+    "cross_val_score(rf, X_train, y_train, cv=5).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7958253843564134"
+       "0.7748400852878465"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_score(rf, X_train, y_train, cv=3).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7867867867867867"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cross_val_score(et, X_train, y_train, cv=3).mean()"
+    "cross_val_score(et, X_train, y_train, cv=5).mean()"
    ]
   },
   {
@@ -599,23 +490,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8183183183183184\n"
+      "0.8213213213213213\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'max_depth': 4, 'n_estimators': 100}"
+       "{'max_depth': 3, 'n_estimators': 200}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +516,7 @@
     "    'n_estimators': [100, 150, 200],\n",
     "    'max_depth': [None, 1, 2, 3, 4, 5],\n",
     "}\n",
-    "gs = GridSearchCV(rf, param_grid=rf_params, cv=5, n_jobs=-1)\n",
+    "gs = GridSearchCV(rf, param_grid=rf_params, cv=5)\n",
     "gs.fit(X_train, y_train)\n",
     "print(gs.best_score_)\n",
     "gs.best_params_"
@@ -633,17 +524,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8378378378378378"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs.score(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7937219730941704"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs.score(X_val, y_val)"
+   ]
   },
   {
    "cell_type": "code",
@@ -671,24 +588,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pred = gs.predict(test[features])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test['Survived'] = pred"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test[['PassengerId', 'Survived']].to_csv('submission.csv')"
+   ]
   },
   {
    "cell_type": "code",
@@ -714,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
