--- a/5.08-lesson-regex/regex-lecture-Copy1.ipynb
+++ b/5.08-lesson-regex/regex-lecture-Copy1.ipynb
@@ -964,8 +964,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -984,8 +985,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1010,8 +1012,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1024,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1034,17 +1037,17 @@
     {
      "data": {
       "text/plain": [
-       "'i'"
+       "'hip'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Everything that matches the expression:\n",
-    "mo.group(1)"
+    "mo.group()"
    ]
   },
   {
@@ -1086,8 +1089,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1099,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1112,7 +1116,7 @@
        "['hip', 'hop', 'hip', 'hip', 'hip', 'hip', 'hop']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,8 +1127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1137,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1150,7 +1155,7 @@
        "['i', 'o', 'i', 'i', 'i', 'i', 'o']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,45 +1202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['data+science+jobs']"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# A:\n",
-    "import re\n",
-    "mystring = \"https://www.google.com/search?q=data+science+jobs\"\n",
-    "re.findall(r'\\?q=(.+)', mystring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.google.com/search'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.sub(r'\\?q=(.+)', '', mystring)"
+    "# A:"
    ]
   },
   {
@@ -1259,249 +1232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# A:\n",
-    "teams_data = \"\"\"\n",
-    "Celtics:\n",
-    "Record: 17-10, 5th in NBA Eastern Conference\n",
-    "Last Game: W 130-125 at WAS\n",
-    "Next Game: Friday, Dec. 14 vs. ATL\n",
-    "Coach: Brad Stevens (17-10)\n",
-    "Executive: Danny Ainge\n",
-    "PTS/G: 111.1 (12th of 30) Opp PTS/G: 103.6 (3rd of 30)\n",
-    "SRS: 6.77 (3rd of 30) Pace: 98.7 (22nd of 30)\n",
-    "Off Rtg: 111.3 (11th of 30) Def Rtg: 103.7 (3rd of 30)\n",
-    "Expected W-L: 20-7 (3rd of 30)\n",
-    "Arena: TD Garden Attendance: 204,864 (23rd of 30)\n",
-    "\n",
-    "Hawks:\n",
-    "Record: 6-21, 14th in NBA Eastern Conference\n",
-    "Last Game: L 107-114 at DAL\n",
-    "Next Game: Friday, Dec. 14 at BOS\n",
-    "Coach: Lloyd Pierce (6-21)\n",
-    "Executive: Travis Schlenk\n",
-    "PTS/G: 107.9 (22nd of 30) Opp PTS/G: 118.0 (30th of 30)\n",
-    "SRS: -9.68 (28th of 30) Pace: 105.3 (1st of 30)\n",
-    "Off Rtg: 102.4 (28th of 30) Def Rtg: 112.1 (23rd of 30)\n",
-    "Expected W-L: 6-21 (28th of 30)\n",
-    "Arena: State Farm Arena Attendance: 188,789 (29th of 30)\n",
-    "\n",
-    "Spurs:\n",
-    "Record: 14-14, 10th in NBA Western Conference\n",
-    "Last Game: W 111-86 vs. PHO\n",
-    "Next Game: Thursday, Dec. 13 vs. LAC\n",
-    "Coach: Gregg Popovich (14-14)\n",
-    "Executive: R.C. Buford\n",
-    "PTS/G: 110.3 (15th of 30) Opp PTS/G: 112.4 (22nd of 30)\n",
-    "SRS: -2.14 (21st of 30) Pace: 98.3 (23rd of 30)\n",
-    "Off Rtg: 111.4 (9th of 30) Def Rtg: 113.4 (25th of 30)\n",
-    "Expected W-L: 12-16 (23rd of 30)\n",
-    "Arena: AT&T Center Attendance: 255,993 (11th of 30)\n",
-    "\n",
-    "Knicks:\n",
-    "Record: 8-21, 12th in NBA Eastern Conference\n",
-    "Last Game: L 106-113 at CLE\n",
-    "Next Game: Friday, Dec. 14 at CHO\n",
-    "Coach: David Fizdale (8-21)\n",
-    "Executive: Steve Mills\n",
-    "PTS/G: 108.3 (21st of 30) Opp PTS/G: 114.9 (26th of 30)\n",
-    "SRS: -6.28 (26th of 30) Pace: 99.5 (17th of 30)\n",
-    "Off Rtg: 107.6 (23rd of 30) Def Rtg: 114.2 (29th of 30)\n",
-    "Expected W-L: 9-20 (26th of 30)\n",
-    "Arena: Madison Square Garden (IV) Attendance: 249,904 (12th of 30)\n",
-    "\n",
-    "Bulls:\n",
-    "Record: 6-22, 15th in NBA Eastern Conference\n",
-    "Last Game: L 89-108 vs. SAC\n",
-    "Next Game: Thursday, Dec. 13 at ORL\n",
-    "Coach: Fred Hoiberg (5-19), Jim Boylen (1-3)\n",
-    "Executive: Gar Forman\n",
-    "PTS/G: 101.8 (30th of 30) Opp PTS/G: 112.9 (23rd of 30)\n",
-    "SRS: -9.90 (29th of 30) Pace: 100.1 (10th of 30)\n",
-    "Off Rtg: 100.6 (30th of 30) Def Rtg: 111.6 (21st of 30)\n",
-    "Expected W-L: 5-23 (29th of 30)\n",
-    "Arena: United Center Attendance: 300,436 (2nd of 30)\n",
-    "\n",
-    "Washington:\n",
-    "Record: 11-17, 10th in NBA Eastern Conference\n",
-    "Last Game: L 125-130 vs. BOS\n",
-    "Next Game: Friday, Dec. 14 at BRK\n",
-    "Coach: Scott Brooks (11-17)\n",
-    "Executive: Ernie Grunfeld\n",
-    "PTS/G: 112.1 (10th of 30) Opp PTS/G: 116.9 (29th of 30)\n",
-    "SRS: -4.84 (25th of 30) Pace: 101.4 (8th of 30)\n",
-    "Off Rtg: 109.4 (18th of 30) Def Rtg: 114.1 (27th of 30)\n",
-    "Expected W-L: 10-18 (25th of 30)\n",
-    "Arena: Capital One Arena Attendance: 217,707 (20th of 30)\n",
-    "\n",
-    "Seattle (Oklahoma):\n",
-    "Record: 17-9, 3rd in NBA Western Conference\n",
-    "Last Game: L 114-118 at NOP\n",
-    "Next Game: Friday, Dec. 14 at DEN\n",
-    "Coach: Billy Donovan (17-9)\n",
-    "Executive: Sam Presti\n",
-    "PTS/G: 111.7 (11th of 30) Opp PTS/G: 105.2 (5th of 30)\n",
-    "SRS: 4.83 (5th of 30) Pace: 102.4 (6th of 30)\n",
-    "Off Rtg: 109.1 (19th of 30) Def Rtg: 102.8 (1st of 30)\n",
-    "Expected W-L: 18-8 (4th of 30)\n",
-    "Arena: Chesapeake Energy Arena Attendance: 236,639 (14th of 30)\n",
-    "\n",
-    "Denver:\n",
-    "Record: 18-9, 1st in NBA Western Conference\n",
-    "Last Game: W 105-99 vs. MEM\n",
-    "Next Game: Friday, Dec. 14 vs. OKC\n",
-    "Coach: Mike Malone (18-9)\n",
-    "Executive: Tim Connelly\n",
-    "PTS/G: 110.0 (17th of 30) Opp PTS/G: 103.7 (4th of 30)\n",
-    "SRS: 6.53 (4th of 30) Pace: 97.1 (27th of 30)\n",
-    "Off Rtg: 112.4 (8th of 30) Def Rtg: 106.0 (6th of 30)\n",
-    "Expected W-L: 19-8 (5th of 30)\n",
-    "Arena: Pepsi Center Attendance: 231,848 (16th of 30)\n",
-    "\n",
-    "Golden State:\n",
-    "Record: 19-10, 2nd in NBA Western Conference\n",
-    "Last Game: L 93-113 vs. TOR\n",
-    "Next Game: Friday, Dec. 14 at SAC\n",
-    "Coach: Steve Kerr (19-10)\n",
-    "Executive: Bob Myers\n",
-    "PTS/G: 115.6 (3rd of 30) Opp PTS/G: 110.6 (15th of 30)\n",
-    "SRS: 4.71 (6th of 30) Pace: 99.7 (16th of 30)\n",
-    "Off Rtg: 115.1 (1st of 30) Def Rtg: 110.2 (17th of 30)\n",
-    "Expected W-L: 19-10 (7th of 30)\n",
-    "Arena: Oracle Arena Attendance: 293,940 (5th of 30)\n",
-    "\n",
-    "L.A.:\n",
-    "Record: 17-10, 4th in NBA Western Conference\n",
-    "Last Game: W 108-105 vs. MIA\n",
-    "Next Game: Thursday, Dec. 13 at HOU\n",
-    "Coach: Luke Walton (17-10)\n",
-    "Executive: Magic Johnson\n",
-    "PTS/G: 113.1 (9th of 30) Opp PTS/G: 110.9 (17th of 30)\n",
-    "SRS: 1.45 (14th of 30) Pace: 102.7 (5th of 30)\n",
-    "Off Rtg: 109.7 (17th of 30) Def Rtg: 107.5 (8th of 30)\n",
-    "Expected W-L: 15-12 (10th of 30)\n",
-    "Arena: STAPLES Center Attendance: 284,955 (7th of 30)\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Executive: Danny Ainge',\n",
-       " 'Executive: Travis Schlenk',\n",
-       " 'Executive: R.C. Buford',\n",
-       " 'Executive: Steve Mills',\n",
-       " 'Executive: Gar Forman',\n",
-       " 'Executive: Ernie Grunfeld',\n",
-       " 'Executive: Sam Presti',\n",
-       " 'Executive: Tim Connelly',\n",
-       " 'Executive: Bob Myers',\n",
-       " 'Executive: Magic Johnson']"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Executive name\n",
-    "re.findall(r'Executive: .+', teams_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Danny Ainge',\n",
-       " 'Travis Schlenk',\n",
-       " 'R.C. Buford',\n",
-       " 'Steve Mills',\n",
-       " 'Gar Forman',\n",
-       " 'Ernie Grunfeld',\n",
-       " 'Sam Presti',\n",
-       " 'Tim Connelly',\n",
-       " 'Bob Myers',\n",
-       " 'Magic Johnson']"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[e.split(': ')[1] for e in re.findall(r'Executive: .+', teams_data)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Danny Ainge',\n",
-       " 'Travis Schlenk',\n",
-       " 'R.C. Buford',\n",
-       " 'Steve Mills',\n",
-       " 'Gar Forman',\n",
-       " 'Ernie Grunfeld',\n",
-       " 'Sam Presti',\n",
-       " 'Tim Connelly',\n",
-       " 'Bob Myers',\n",
-       " 'Magic Johnson']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## extract coach's names itself from list returned in re.findall\n",
-    "[e[11:] for e in re.findall(r'Executive: .+', teams_data)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Record: 17-10',\n",
-       " 'Record: 6-21',\n",
-       " 'Record: 14-14',\n",
-       " 'Record: 8-21',\n",
-       " 'Record: 6-22',\n",
-       " 'Record: 11-17',\n",
-       " 'Record: 17-9',\n",
-       " 'Record: 18-9',\n",
-       " 'Record: 19-10',\n",
-       " 'Record: 17-10']"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.findall(r'Record: \\d+\\-\\d+', teams_data)"
+    "# A:"
    ]
   },
   {
@@ -1518,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1528,23 +1265,21 @@
     {
      "data": {
       "text/plain": [
-       "0       onefish\n",
-       "1       twofish\n",
-       "2       redfish\n",
-       "3      bluefish\n",
-       "4     nar whale\n",
-       "5    whale blue\n",
+       "0     onefish\n",
+       "1     twofish\n",
+       "2     redfish\n",
+       "3    bluefish\n",
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "fish = pd.Series(['onefish', 'twofish','redfish', 'bluefish', 'nar whale', 'whale blue'])\n",
+    "fish = pd.Series(['onefish', 'twofish','redfish', 'bluefish'])\n",
     "fish"
    ]
   },
@@ -1558,27 +1293,6 @@
    "source": [
     "<a id=\"strcontains\"></a>\n",
     "### `str.contains`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4    nar whale\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fish[fish.str.contains('whale$')]"
    ]
   },
   {
@@ -1621,115 +1335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3      bluefish\n",
-       "5    whale blue\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fish[fish.str.contains('lu')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>b</td>\n",
-       "      <td>efish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>whale b</td>\n",
-       "      <td>e</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         0      1\n",
-       "0      NaN    NaN\n",
-       "1      NaN    NaN\n",
-       "2      NaN    NaN\n",
-       "3        b  efish\n",
-       "4      NaN    NaN\n",
-       "5  whale b      e"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fish.str.extract('(.*)lu(.*)', expand=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1742,12 +1349,10 @@
        "1     two\n",
        "2     red\n",
        "3    blue\n",
-       "4     NaN\n",
-       "5     NaN\n",
        "dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
