--- a/6.01-lesson-decision_trees/starter-code.ipynb
+++ b/6.01-lesson-decision_trees/starter-code.ipynb
@@ -197,25 +197,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Gini function, called gini.\n"
+    "# Define Gini function, called gini.\n",
+    "def gini(lst_obs):\n",
+    "    # create a list to store the squared class probabilities\n",
+    "    gini_sum = []\n",
+    "    gini_impurity = 1\n",
+    "    # Iterate over each unique class\n",
+    "    for class_i in set(lst_obs):\n",
+    "        \n",
+    "        # calculate observed probability of class_i\n",
+    "        prob = (lst_obs.count(class_i))/len(lst_obs)\n",
+    "        \n",
+    "        #square the proobability and append it to gini_sum\n",
+    "        gini_sum.append(prob**2)\n",
+    "        gini_impurity-=prob**2\n",
+    "    print(gini_impurity)\n",
+    "    return (1-sum(gini_sum))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.611111111111111\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.6111111111111112"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,16 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,18 +320,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,16 +370,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,16 +418,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6666666666666665\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.6666666666666667"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +488,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read in Titanic data.\n",
-    "titanic = pd.read_csv('./titanic_clean.csv')\n",
+    "titanic = pd.read_csv('titanic_clean.csv')\n",
     "\n",
     "# Change sex to float.\n",
     "titanic['Sex'] = titanic['Sex'].map({'male':0,\n",
@@ -465,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +551,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <td>43</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>5.0</td>\n",
@@ -512,7 +562,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
+       "      <td>42</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>28.5</td>\n",
@@ -523,7 +573,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
+       "      <td>73</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>71.0</td>\n",
@@ -534,7 +584,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
+       "      <td>167</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>24.0</td>\n",
@@ -545,7 +595,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>449</th>\n",
+       "      <td>449</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>32.0</td>\n",
@@ -568,37 +618,39 @@
        "449       3    0  32.0      0      0   7.8542           1           0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check out first five rows of X_train.\n"
+    "# Check out first five rows of X_train.\n",
+    "X_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import model.\n"
+    "# Import model.\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate model.\n",
-    "dt ="
+    "dt = DecisionTreeClassifier(random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -612,18 +664,19 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Fit model.\n"
+    "# Fit model.\n",
+    "dt.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +690,8 @@
    ],
    "source": [
     "# Evaluate model.\n",
-    "\n"
+    "print(f'Score on training set: {dt.score(X_train, y_train)}')\n",
+    "print(f'Score on testing set: {dt.score(X_test, y_test)}')"
    ]
   },
   {
@@ -685,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,12 +749,15 @@
     "# - at least 3 samples in each leaf node.\n",
     "# - random state of 42.\n",
     "\n",
-    "dt ="
+    "dt = DecisionTreeClassifier(max_depth = 5,\n",
+    "                            min_samples_split = 7,\\\n",
+    "                            min_samples_leaf =3,\\\n",
+    "                            random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -714,18 +771,19 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Fit model.\n"
+    "# Fit model.\n",
+    "dt.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,16 +834,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid ="
+    "grid = GridSearchCV(estimator=DecisionTreeClassifier(random_state=42),\n",
+    "                   param_grid = {'max_depth':[3,5,7,10],\n",
+    "                                'min_samples_split':[5,10,15,20],\n",
+    "                                'min_samples_leaf':[2,3,4,5,6,7]},\n",
+    "                   cv=5,\n",
+    "                   verbose=1,\n",
+    "                   n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -799,23 +863,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    7.5s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.0196499824523926\n"
+      "8.32273554801941\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done 480 out of 480 | elapsed:    3.0s finished\n",
-      "/Users/mattbrems/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
-      "  DeprecationWarning)\n"
+      "[Parallel(n_jobs=-1)]: Done 480 out of 480 | elapsed:    8.0s finished\n"
      ]
     }
    ],
@@ -823,17 +885,18 @@
     "import time\n",
     "\n",
     "# Start our timer.\n",
-    "\n",
+    "t0 = time.time()\n",
     "\n",
     "# Let's GridSearch over the above parameters on our training data.\n",
+    "grid.fit(X_train, y_train)\n",
     "\n",
-    "\n",
-    "# Stop our timer and print the result.\n"
+    "# Stop our timer and print the result.\n",
+    "print(time.time()-t0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -843,22 +906,23 @@
        "            max_features=None, max_leaf_nodes=None,\n",
        "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=6, min_samples_split=15,\n",
-       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=42,\n",
        "            splitter='best')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# What is our best decision tree?\n"
+    "# What is our best decision tree?\n",
+    "grid.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -867,38 +931,40 @@
        "{'max_depth': 7, 'min_samples_leaf': 6, 'min_samples_split': 15}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# What were the best parameters of our decision tree?\n"
+    "# What were the best parameters of our decision tree?\n",
+    "grid.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8172690763052208"
+       "0.8152610441767069"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# What was the cross-validated score of the above decision tree?\n"
+    "# What was the cross-validated score of the above decision tree?\n",
+    "grid.best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -912,38 +978,42 @@
    ],
    "source": [
     "# Instantiate model with best parameters.\n",
-    "\n",
+    "dt2 = DecisionTreeClassifier(max_depth = 7,\n",
+    "                             min_samples_leaf=6,\n",
+    "                             min_samples_split=15,\n",
+    "                             random_state=42)\n",
     "\n",
     "# Fit model.\n",
-    "dt.fit(X_train, y_train)\n",
+    "dt2.fit(X_train, y_train)\n",
     "\n",
     "# Evaluate model.\n",
-    "print(f'Score on training set: {dt.score(X_train, y_train)}')\n",
-    "print(f'Score on testing set: {dt.score(X_test, y_test)}')"
+    "print(f'Score on training set: {dt2.score(X_train, y_train)}')\n",
+    "print(f'Score on testing set: {dt2.score(X_test, y_test)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate predictions on test set.\n",
-    "preds ="
+    "preds = dt2.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import confusion_matrix.\n"
+    "# Import confusion_matrix.\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -980,14 +1050,14 @@
    "source": [
     "# Calculate sensitivity.\n",
     "\n",
-    "sens =\n",
+    "sens = tp/(tp+fn)\n",
     "\n",
     "print(f'Sensitivity: {round(sens, 4)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1071,7 @@
    "source": [
     "# Calculate specificity.\n",
     "\n",
-    "spec =\n",
+    "spec = tn / (tn+fp)\n",
     "\n",
     "print(f'Specificity: {round(spec, 4)}')"
    ]
@@ -1067,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   },
   "widgets": {
    "state": {
