--- a/6.04-lesson-boosting/introduction-to-boosting.ipynb
+++ b/6.04-lesson-boosting/introduction-to-boosting.ipynb
@@ -323,7 +323,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
